# game_rpg_Goryunova

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
fastapi_app/: Dockerfile  pyproject.toml
fastapi_app/src/: config.py  main.py
fastapi_app/src/api/: routes.py
fastapi_app/src/domain/: entities.py
fastapi_app/src/infrastructure/: model_loader.py
fastapi_app/src/rpg_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fastapi_app/src/services/: prediction_service.py
fastapi_app/tests/integration/: test_fastapi.py
flask_app/: Dockerfile  pyproject.toml
flask_app/alembic/: env.py
flask_app/alembic/versions/: 0001_init.py
flask_app/src/: app.py  config.py
flask_app/src/domain/: entities.py  interfaces.py
flask_app/src/game/: npc.py  npc_manager.py  world.py
flask_app/src/game/data/: npcs.json
flask_app/src/infrastructure/: database.py  orm_models.py  repositories.py
flask_app/src/rpg_flask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flask_app/src/services/: auth_service.py  game_service.py
flask_app/src/static/css/: style.css
flask_app/src/static/js/: game.js
flask_app/src/templates/: base.html
flask_app/src/templates/auth/: login.html  register.html
flask_app/src/templates/game/: dialogue.html  history.html  index.html
flask_app/src/web/: auth_bp.py  forms.py  game_bp.py
ml/: train.py
tests/: conftest.py
tests/integration/: test_fastapi.py
tests/unit/: test_auth_service.py
