[project]
name = "rpg-dev"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "types-requests",
    "sqlalchemy[mypy]",
    "pytest>=8.0.0",
    "pre-commit>=3.7.0",
]