[project]
name = "rpg-flask"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-wtf>=1.2.0",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "werkzeug>=3.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.2.0",
    "wtforms>=3.1.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]